--- a/index.html
+++ b/index.html
@@ -1,28 +1,53 @@
 <!DOCTYPE html>
 <html>
   <head>
- 
+      <meta charset="UTF-8">
+      <meta name="description" content="#" >
+      <title> Kate's website </title>
+        <link rel="stylesheet" type = "text/css" href= "file:///C:/Users/dubhc/Documents/Git/building-blocks.github.io/Style.css" />
   </head>
-  <body>
+  <div id= "wrapper">
+  <header>
+    <body>
+
+       <div id=" menu">
+         <p>
+         <ul>
+
+            <li>About me<link href = "#"  /></li>
+            <li> <link href = "#"  /></li>
+            <li><link href = "#"  /></li>
+            <li>further links<link href = "#"  /></li>
+          </ul>
+        </p>
+    </div>
     <title> The building blocks of change </title>
-   <h1>
-       Bio
+   </header>
+    <br/>
+<main>
+   <div id="about"> <h1>
+       about me
    </h1>
+   <hr/>
    <h2>Kate O'Brien</h2>
     <p>
 What do you do when you fall? simple you get back up and try something different.  This is my something different. 
 
 I am a docotor in the Irish health service. I'm hoping to change then tense of that previous sentence to make it past. 
 This here is me building a gateway to a different life, one hopefully that I'll be happy to live. 
-    </p>
-    <h2> GitHub: </h2>
-<h2> Codewars :</h2>
-<h2> freeCodeCamp </h2>
-    /*
+    </p> </div>
+ 
+  </main>
 
-    Tell us something interesting about yourself that will support your application;
-    Jekyll
-Not use a framework like Bootstrap or libraries like jQuery.
-*/
-  </body>
+<footer>
+        <h2> GitHub: </h2>
+        <h2> Codewars :</h2>
+        <h2> freeCodeCamp </h2>
+
+</footer>
+  </body> </div>
 </html>
+
+<!-- Tell us something interesting about yourself that will support your application;
+Jekyll
+Not use a framework like Bootstrap or libraries like jQuery. -->
