--- a/index.html
+++ b/index.html
@@ -4,45 +4,55 @@
       <meta charset="UTF-8">
       <meta name="description" content="#" >
       <title> Kate's website </title>
-        <link rel="stylesheet" type = "text/css" href= "file:///C:/Users/dubhc/Documents/Git/building-blocks.github.io/Style.css" />
+      <link rel="stylesheet" type = "text/css" href= "Style.css">
   </head>
   <div id= "wrapper">
-  <header>
-    <body>
+    <header>
+      <body>
 
-       <div id=" menu">
-         <p>
-         <ul>
+     
 
-            <li>About me<link href = "#"  /></li>
-            <li> <link href = "#"  /></li>
-            <li><link href = "#"  /></li>
-            <li>further links<link href = "#"  /></li>
-          </ul>
-        </p>
-    </div>
-    <title> The building blocks of change </title>
+       
+        <ul>
+          <li><a href = "#">Menu</a>
+            <ul>
+               <li> <a href = "#">About me</a> </li>
+               <li><a href = "#"> Projects</a> </li>
+                <li><a href = "#">CV</a></li>
+                <li><a href = "#footer">Contact</a> </li>
+            </ul> 
+          </li>
+        </ul>
+
+    <title> Tribute page </title>
    </header>
-    <br/>
+  
 <main>
-   <div id="about"> <h1>
-       about me
-   </h1>
-   <hr/>
-   <h2>Kate O'Brien</h2>
-    <p>
-What do you do when you fall? simple you get back up and try something different.  This is my something different. 
 
-I am a docotor in the Irish health service. I'm hoping to change then tense of that previous sentence to make it past. 
-This here is me building a gateway to a different life, one hopefully that I'll be happy to live. 
+  
+  
+    <h2>
+       Kate O'Brien
+   </h2>
+   
+   <div id=about>
+    <p> So here are some tidbits about me, I'm on the road to becoming a software developer 
+      from being a junior doctor. My programming skills are self taught so far, concentrating on Front-End.
+       I am a self professed bicycle perv.  I'm a combination of an extrovert and introvert. 
+       I grew up in the depths of the Irish countryside 
+       so I can claim to be the only gay in the village.  
     </p> </div>
- 
+    <div id=projects>
+      <h2>Projects</h2>
+    </div>
   </main>
-
+  <hr/>
 <footer>
-        <h2> GitHub: </h2>
-        <h2> Codewars :</h2>
-        <h2> freeCodeCamp </h2>
+        <h6> GitHub: <a href="https://github.com/dubhcait" target="_blank">dubhcait</a> </h6>
+        <h6> Codewars : <a href="https://www.codewars.com/users/Dubhcait" target="_blank">dubhcait</a> </h6>
+        <h6> freeCodeCamp: <a href="https://www.freecodecamp.org/dubhcait" target="_blank">dubhcait</a> </h6>
+        <h6> Twitter: <a href= "https://twitter.com/kob_anne" target="_blank"> @kob_anne </a></h6>
+        <h6> CV </h6>
 
 </footer>
   </body> </div>
@@ -50,4 +60,6 @@ This here is me building a gateway to a different life, one hopefully that I'll 
 
 <!-- Tell us something interesting about yourself that will support your application;
 Jekyll
-Not use a framework like Bootstrap or libraries like jQuery. -->
+Not use a framework like Bootstrap or libraries like jQuery. 
+
+-->
