--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                <li> <a href = "#">About me</a> </li>
                <li><a href = "#"> Projects</a> </li>
-                <li><a href = "#">CV</a></li>
+                <li> <a href= "CV.pdf" target="_blank">CV</a></li>
                 <li><a href = "#footer">Contact</a> </li>
             </ul> 
           </li>
@@ -38,7 +38,7 @@
    <div id=about>
     <p> So here are some tidbits about me, I'm on the road to becoming a software developer 
       from being a junior doctor. My programming skills are self taught so far, concentrating on Front-End.
-       I am a self professed bicycle perv.  I'm a combination of an extrovert and introvert. 
+       I am a self professed bicycle obsessed.  I'm a combination of an extrovert and introvert. 
        I grew up in the depths of the Irish countryside 
        so I can claim to be the only gay in the village.  
     </p> </div>
@@ -52,7 +52,7 @@
         <h6> Codewars : <a href="https://www.codewars.com/users/Dubhcait" target="_blank">dubhcait</a> </h6>
         <h6> freeCodeCamp: <a href="https://www.freecodecamp.org/dubhcait" target="_blank">dubhcait</a> </h6>
         <h6> Twitter: <a href= "https://twitter.com/kob_anne" target="_blank"> @kob_anne </a></h6>
-        <h6> CV </h6>
+        <h6>  <a href= "CV.pdf" target="_blank">CV</a> </h6>
 
 </footer>
   </body> </div>
