--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" type = "text/css" href= "Style.css">
   </head>
   <div id= "wrapper">
-    <header>
+    <header class="grid">
       <body>
 
      
@@ -24,35 +24,33 @@
           </li>
         </ul>
 
-    <title> Tribute page </title>
+        <h1>
+          Kate O'Brien
+        </h1>
+        <div class="bg-image"></div>
    </header>
   
 <main>
 
   
-  
-    <h2>
-       Kate O'Brien
-   </h2>
    
-   <div id=about>
+   <div id=about class="grid">
     <p> So here are some tidbits about me, I'm on the road to becoming a software developer 
       from being a junior doctor. My programming skills are self taught so far, concentrating on Front-End.
-       I am a self professed bicycle obsessed.  I'm a combination of an extrovert and introvert. 
-       I grew up in the depths of the Irish countryside 
-       so I can claim to be the only gay in the village.  
+       I am self professed bicycle obsessed.  I've got both extrovert and introvert traits. 
+       I grew up in the depths of the Irish countryside so I can claim to be the only gay in the village.  
     </p> </div>
-    <div id=projects>
+  
+    <div id=projects class="grid">
       <h2>Projects</h2>
     </div>
   </main>
-<footer>
-        <h6> GitHub: <a href="https://github.com/dubhcait" target="_blank">dubhcait</a> </h6>
-        <h6> Codewars : <a href="https://www.codewars.com/users/Dubhcait" target="_blank">dubhcait</a> </h6>
-        <h6> freeCodeCamp: <a href="https://www.freecodecamp.org/dubhcait" target="_blank">dubhcait</a> </h6>
-        <h6> Twitter: <a href= "https://twitter.com/kob_anne" target="_blank"> @kob_anne </a></h6>
-        <h6>  <a href= "CV.pdf" target="_blank">CV</a> </h6>
-
+<footer class="grid">
+         <a href="https://github.com/dubhcait" target="_blank"><img src="githubbutton.png" alt="GitHub"></a> 
+        <a href="https://www.codewars.com/users/Dubhcait" target="_blank"><img src="codewarsbutton.png" alt="Codewars"></a> 
+         <a href="https://www.freecodecamp.org/dubhcait" target="_blank"><img src="freecodecampbutton.png" alt="Free Code Camp"></a> 
+         <a href= "https://twitter.com/kob_anne" target="_blank"><img src="twitter-button.png" alt="Twitter"></a>
+         <a href= "CV.pdf" target="_blank"><img src="CV-Button.png" alt="CV"></a> 
 </footer>
   </body> </div>
 </html>
